--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^15.0.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
@@ -25,6 +26,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jest": "^29.7.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.8"
