--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_GET_SERVICES = 'http://localhost:3000/services/page='
 VITE_REGISTER_USER= 'http://localhost:3000/register'
 VITE_SIGNIN_USER= 'http://localhost:3000/signin'
+VITE_GET_USERS = 'http://localhost:3000/users'
