organize code for auth component

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ VITE_REGISTER_USER= 'http://localhost:3000/register'
 VITE_SIGNIN_USER= 'http://localhost:3000/signin'
 VITE_GET_USERS = 'http://localhost:3000/users'
 VITE_VERIFY_ACCOUNT = 'http://localhost:3000/verifyEmail'
+VITE_AUTH_LOGIN = 'http://localhost:3000/auth'
+VITE_AUTH_CODE_RESEND = 'http://localhost:3000/resend-signin-code'
