--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_GET_USERS = 'http://localhost:3000/users'
 VITE_VERIFY_ACCOUNT = 'http://localhost:3000/verifyEmail'
 VITE_AUTH_LOGIN = 'http://localhost:3000/auth'
 VITE_AUTH_CODE_RESEND = 'http://localhost:3000/resend-signin-code'
+VITE_FORGOT_PASSWORD = 'http://localhost:3000/forgetpassword'
