organize api for reset-forget-password

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ VITE_VERIFY_ACCOUNT = 'http://localhost:3000/verifyEmail'
 VITE_AUTH_LOGIN = 'http://localhost:3000/auth'
 VITE_AUTH_CODE_RESEND = 'http://localhost:3000/resend-signin-code'
 VITE_FORGOT_PASSWORD = 'http://localhost:3000/forgetpassword'
+VITE_RESET_FORGOT_PASSWORD = 'http://localhost:3000/reset-forgotpassword"'
