--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ VITE_AUTH_LOGIN = 'http://localhost:3000/auth'
 VITE_AUTH_CODE_RESEND = 'http://localhost:3000/resend-signin-code'
 VITE_FORGOT_PASSWORD = 'http://localhost:3000/forgetpassword'
 VITE_RESET_FORGOT_PASSWORD = 'http://localhost:3000/reset-forgotpassword'
+VITE_SIGNEDIN_USERINFO = 'http://localhost:3000/users/user/user-info'
