--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-VITE_GET_SERVICES = 'http://localhost:3000/services/page='
 VITE_REGISTER_USER= 'http://localhost:3000/register'
 VITE_SIGNIN_USER= 'http://localhost:3000/signin'
 VITE_GET_USERS = 'http://localhost:3000/users'
@@ -8,3 +7,5 @@ VITE_AUTH_CODE_RESEND = 'http://localhost:3000/resend-signin-code'
 VITE_FORGOT_PASSWORD = 'http://localhost:3000/forgetpassword'
 VITE_RESET_FORGOT_PASSWORD = 'http://localhost:3000/reset-forgotpassword'
 VITE_SIGNEDIN_USERINFO = 'http://localhost:3000/users/user/user-info'
+VITE_GET_SERVICES = 'http://localhost:3000/services/page='
+VITE_ADD_SERVICE = 'http://localhost:3000/services/new'
