--- a/.env
+++ b/.env
@@ -7,5 +7,6 @@ VITE_AUTH_CODE_RESEND = 'http://localhost:3000/resend-signin-code'
 VITE_FORGOT_PASSWORD = 'http://localhost:3000/forgetpassword'
 VITE_RESET_FORGOT_PASSWORD = 'http://localhost:3000/reset-forgotpassword'
 VITE_SIGNEDIN_USERINFO = 'http://localhost:3000/users/user/user-info'
-VITE_GET_SERVICES = 'http://localhost:3000/services/page='
+VITE_GET_SERVICES = 'http://localhost:3000/services'
 VITE_ADD_SERVICE = 'http://localhost:3000/services/new'
+
