add contactus api and function

--- a/.env
+++ b/.env
@@ -9,4 +9,5 @@ VITE_RESET_FORGOT_PASSWORD = 'http://localhost:3000/reset-forgotpassword'
 VITE_SIGNEDIN_USERINFO = 'http://localhost:3000/users/user/user-info'
 VITE_GET_SERVICES = 'http://localhost:3000/services'
 VITE_ADD_SERVICE = 'http://localhost:3000/services/new'
+VITE_CONTACT_US_MSG = 'http://localhost:3000/send-contactus-message'
 
