add api to update profile pic

--- a/.env
+++ b/.env
@@ -11,5 +11,11 @@ VITE_GET_SERVICES = 'http://localhost:3000/services'
 VITE_ADD_SERVICE = 'http://localhost:3000/services/new'
 VITE_CONTACT_US_MSG = 'http://localhost:3000/send-contactus-message'
 VITE_CONTACT_US_VIEW_MSG = 'http://localhost:3000/view-contactus-messages'
+VITE_CHANGE_PROFILEIMAGE = 'http://localhost:3000/user/changeProfileImage'
+
+
+
+
+
 
 
