--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+VITE_BELC= 'http://localhost:3000'
 VITE_REGISTER_USER= 'http://localhost:3000/register'
 VITE_SIGNIN_USER= 'http://localhost:3000/signin'
 VITE_GET_USERS = 'http://localhost:3000/users'
