--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ VITE_ADD_SERVICE = 'http://localhost:3000/services/new'
 VITE_CONTACT_US_MSG = 'http://localhost:3000/send-contactus-message'
 VITE_CONTACT_US_VIEW_MSG = 'http://localhost:3000/view-contactus-messages'
 VITE_CHANGE_PROFILEIMAGE = 'http://localhost:3000/user/changeProfileImage'
-
-
+VITE_REQ_USERCONNECTION = 'http://localhost:3000/request-user-connection'
+VITE_ACCEPT_USERCONNECTION = 'http://localhost:3000/accept-user-connection'
 
 
 
