--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ VITE_CONTACT_US_VIEW_MSG = 'http://localhost:3000/view-contactus-messages'
 VITE_CHANGE_PROFILEIMAGE = 'http://localhost:3000/user/changeProfileImage'
 VITE_REQ_USERCONNECTION = 'http://localhost:3000/request-user-connection'
 VITE_ACCEPT_USERCONNECTION = 'http://localhost:3000/accept-user-connection'
-
+VITE_VIEW_ALLCONNECTIONS = 'http://localhost:3000/get-all-connections'
 
 
 
