servicepayment api work

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ VITE_CHANGE_PROFILEIMAGE = 'http://localhost:3000/user/changeProfileImage'
 VITE_REQ_USERCONNECTION = 'http://localhost:3000/request-user-connection'
 VITE_ACCEPT_USERCONNECTION = 'http://localhost:3000/accept-user-connection'
 VITE_VIEW_ALLCONNECTIONS = 'http://localhost:3000/get-all-connections'
+VITE_SERVICE_PAYMENT = 'http://localhost:3000/services/payment'
 
 
 
